@@ -1,6 +1,7 @@
 package com.project.app.ai.orchestration;
 
 import com.project.app.ai.category.CategoryCreateService;
+import com.project.app.ai.advisory.FinancialMathAdvisoryService;
 import com.project.app.ai.client.GeminiClient;
 import com.project.app.ai.dto.response.AiActionDto;
 import com.project.app.ai.dto.response.AiCardDto;
@@ -9,8 +10,11 @@ import com.project.app.ai.dto.request.ChatMessageHistoryDto;
 import com.project.app.ai.finance.FinanceIntent;
 import com.project.app.ai.finance.FinanceIntentRouter;
 import com.project.app.ai.finance.FinanceResponseBuilder;
+import com.project.app.ai.knowledge.AppKnowledgeService;
 import com.project.app.ai.prompt.SystemPrompt;
+import com.project.app.ai.query.DynamicDataQueryService;
 import com.project.app.ai.routing.CategoryIntentRouter;
+import com.project.app.ai.security.AiSecurityPolicyService;
 import com.project.app.ai.tool.AiTool;
 import com.project.app.ai.tool.GetFinanceCenterSummaryTool;
 import com.project.app.ai.tool.GetBudgetStatusTool;
@@ -31,6 +35,8 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.function.Function;
 import java.util.stream.Collectors;
+import java.text.Normalizer;
+import java.util.Locale;
 
 @Slf4j
 @Service
@@ -49,6 +55,10 @@ public class AiOrchestrator {
     private final List<AiTool> tools;
     private final CategoryCreateService categoryCreateService;
     private final AiSafeActionService safeActionService;
+    private final AppKnowledgeService appKnowledgeService;
+    private final DynamicDataQueryService dynamicDataQueryService;
+    private final FinancialMathAdvisoryService financialMathAdvisoryService;
+    private final AiSecurityPolicyService securityPolicyService;
 
     @Data
     @Builder
@@ -64,6 +74,51 @@ public class AiOrchestrator {
             User user,
             String message,
             List<ChatMessageHistoryDto> history) {
+
+        String routingMessage = contextualizeFollowUp(message, history);
+
+        // Guardrails must run before data queries, actions, tools and the LLM.
+        Optional<AiSecurityPolicyService.SecurityDecision> security = securityPolicyService.evaluate(message);
+        if (security.isPresent()) {
+            AiSecurityPolicyService.SecurityDecision decision = security.get();
+            return OrchestratorResult.builder()
+                    .responseText(decision.text())
+                    .moduleType(decision.moduleType())
+                    .build();
+        }
+
+        // Personal-data queries must win over static guidance when phrases overlap
+        // (for example "hóa đơn nào sắp đến hạn" vs "hóa đơn nhắc hạn là gì").
+        Optional<DynamicDataQueryService.QueryAnswer> dynamic = dynamicDataQueryService.query(user, routingMessage);
+        if (dynamic.isPresent()) {
+            DynamicDataQueryService.QueryAnswer answer = dynamic.get();
+            return OrchestratorResult.builder()
+                    .responseText(answer.text())
+                    .moduleType(answer.moduleType())
+                    .toolResult(answer.toolResult())
+                    .build();
+        }
+
+        Optional<FinancialMathAdvisoryService.AdvisoryAnswer> advisory =
+                financialMathAdvisoryService.advise(user, routingMessage);
+        if (advisory.isPresent()) {
+            FinancialMathAdvisoryService.AdvisoryAnswer answer = advisory.get();
+            return OrchestratorResult.builder()
+                    .responseText(answer.text())
+                    .moduleType("RECOMMENDATION")
+                    .actions(answer.actions())
+                    .build();
+        }
+
+        Optional<AppKnowledgeService.KnowledgeAnswer> knowledge = appKnowledgeService.findAnswer(routingMessage);
+        if (knowledge.isPresent()) {
+            AppKnowledgeService.KnowledgeAnswer answer = knowledge.get();
+            String responseText = adaptKnowledgeAnswer(user, message, history, answer);
+            return OrchestratorResult.builder()
+                    .responseText(responseText)
+                    .moduleType(answer.moduleType())
+                    .build();
+        }
 
         Optional<AiSafeActionService.Result> safeAction = safeActionService.handle(user, message);
         if (safeAction.isPresent()) {
@@ -82,12 +137,12 @@ public class AiOrchestrator {
                     .actions(result.getActions())
                     .build();
         }
-        FinanceIntentRouter.FinanceRoute financeRoute = financeIntentRouter.detect(message);
+        FinanceIntentRouter.FinanceRoute financeRoute = financeIntentRouter.detect(routingMessage);
         if (financeRoute.intent() != FinanceIntent.NONE) {
             return buildFinanceResult(user, financeRoute);
         }
 
-        CategoryIntentRouter.CategoryIntent categoryIntent = categoryIntentRouter.detect(message);
+        CategoryIntentRouter.CategoryIntent categoryIntent = categoryIntentRouter.detect(routingMessage);
         AiTool listTool = findTool("list_user_categories");
 
         if (listTool != null && categoryIntent == CategoryIntentRouter.CategoryIntent.LIST) {
@@ -98,6 +153,10 @@ public class AiOrchestrator {
             return buildListResult(user, listTool, CategoryIntentRouter.CategoryIntent.SPENDING_TYPES);
         }
 
+        if (listTool != null && categoryIntent == CategoryIntentRouter.CategoryIntent.INCOME_TYPES) {
+            return buildListResult(user, listTool, CategoryIntentRouter.CategoryIntent.INCOME_TYPES);
+        }
+
         if (categoryIntent == CategoryIntentRouter.CategoryIntent.GUIDE) {
             return OrchestratorResult.builder()
                     .responseText(responseBuilder.buildCategoryGuideText())
@@ -106,6 +165,72 @@ public class AiOrchestrator {
         }
 
         return processWithGemini(user, message, history);
+    }
+
+    private String contextualizeFollowUp(String message, List<ChatMessageHistoryDto> history) {
+        if (message == null || history == null || history.isEmpty()) return message;
+        String normalized = normalizeForContext(message);
+        boolean followUp = normalized.length() <= 80 && (
+                normalized.contains("roi ma")
+                        || normalized.startsWith("the ")
+                        || normalized.startsWith("vay ")
+                        || normalized.startsWith("con ")
+                        || normalized.startsWith("neu ")
+                        || normalized.contains("thi sao")
+                        || normalized.contains("bao nhieu roi")
+                        || normalized.contains("cua no")
+                        || normalized.contains("danh muc do")
+                        || normalized.contains("quy do")
+                        || normalized.contains("hoa don do"));
+        if (!followUp) return message;
+
+        for (int i = history.size() - 1; i >= 0; i--) {
+            ChatMessageHistoryDto previous = history.get(i);
+            if (previous != null && "user".equalsIgnoreCase(previous.getRole())
+                    && previous.getContent() != null && !previous.getContent().isBlank()) {
+                return previous.getContent().trim() + "\nCâu hỏi nối tiếp: " + message.trim();
+            }
+        }
+        return message;
+    }
+
+    private String normalizeForContext(String value) {
+        return Normalizer.normalize(value == null ? "" : value, Normalizer.Form.NFD)
+                .replaceAll("\\p{M}+", "")
+                .toLowerCase(Locale.ROOT)
+                .replace('đ', 'd')
+                .replaceAll("[^a-z0-9]+", " ")
+                .trim();
+    }
+
+    private String adaptKnowledgeAnswer(
+            User user,
+            String message,
+            List<ChatMessageHistoryDto> history,
+            AppKnowledgeService.KnowledgeAnswer answer) {
+        // Security thresholds and calculations must remain exact and deterministic.
+        if ("PIN_LOCKOUT".equals(answer.id())) {
+            return answer.text();
+        }
+        if (!geminiClient.isConfigured()) {
+            return answer.text();
+        }
+        String adaptivePrompt = systemPrompt.build(user) + """
+
+                NGỮ CẢNH SMARTSPEND ĐÃ TRUY XUẤT:
+                %s
+
+                Hãy trả lời đúng câu hỏi hiện tại dựa trên ngữ cảnh trên. Không sao chép máy móc toàn bộ đoạn tham chiếu:
+                chọn đúng ý người dùng cần, liên hệ lịch sử hội thoại nếu có, thay đổi mức chi tiết theo cách họ hỏi,
+                và hỏi lại một câu ngắn nếu còn thiếu dữ kiện quan trọng. Không thêm chức năng không có trong ngữ cảnh.
+                """.formatted(answer.text());
+        try {
+            String generated = geminiClient.chat(adaptivePrompt, message, history);
+            return generated == null || generated.isBlank() ? answer.text() : generated;
+        } catch (Exception exception) {
+            log.warn("Could not adapt knowledge answer {}, using verified fallback: {}", answer.id(), exception.getMessage());
+            return answer.text();
+        }
     }
 
     private OrchestratorResult buildFinanceResult(User user, FinanceIntentRouter.FinanceRoute route) {
@@ -144,7 +269,7 @@ public class AiOrchestrator {
 
     private ToolResultDto executeFinanceTool(User user, FinanceIntentRouter.FinanceRoute route) {
         FinanceIntent intent = route.intent();
-        if (intent == FinanceIntent.SPENDING_BY_CATEGORY) {
+        if (intent == FinanceIntent.SPENDING_BY_CATEGORY || intent == FinanceIntent.SPENDING_ANALYSIS) {
             return spendingByCategoryTool.execute(user, route.period(), false);
         }
         if (intent == FinanceIntent.SPENDING_BY_CATEGORY_COMPARE) {
@@ -161,13 +286,17 @@ public class AiOrchestrator {
             AiTool listTool,
             CategoryIntentRouter.CategoryIntent style) {
 
+        String categoryType = style == CategoryIntentRouter.CategoryIntent.INCOME_TYPES ? "INCOME"
+                : style == CategoryIntentRouter.CategoryIntent.SPENDING_TYPES ? "EXPENSE" : "ALL";
         ToolResultDto toolResult = tagResult(
-                listTool.execute(user, Collections.emptyMap()),
+                listTool.execute(user, Map.of("categoryType", categoryType)),
                 style);
 
-        String text = style == CategoryIntentRouter.CategoryIntent.SPENDING_TYPES
-                ? responseBuilder.buildSpendingTypesText(toolResult)
-                : responseBuilder.buildListCategoriesText(toolResult);
+        String text = switch (style) {
+            case SPENDING_TYPES -> responseBuilder.buildSpendingTypesText(toolResult);
+            case INCOME_TYPES -> responseBuilder.buildIncomeTypesText(toolResult);
+            default -> responseBuilder.buildListCategoriesText(toolResult);
+        };
 
         return OrchestratorResult.builder()
                 .responseText(text)
@@ -203,13 +332,19 @@ public class AiOrchestrator {
 
                     String finalText;
                     if ("list_user_categories".equals(tool.getName()) && toolResult.isSuccess()) {
+                        CategoryIntentRouter.CategoryIntent detectedStyle = categoryIntentRouter.detect(message);
                         CategoryIntentRouter.CategoryIntent style =
-                                categoryIntentRouter.isSpendingTypesQuestion(message)
-                                        ? CategoryIntentRouter.CategoryIntent.SPENDING_TYPES
-                                        : CategoryIntentRouter.CategoryIntent.LIST;
+                                detectedStyle == CategoryIntentRouter.CategoryIntent.SPENDING_TYPES
+                                        || detectedStyle == CategoryIntentRouter.CategoryIntent.INCOME_TYPES
+                                        ? detectedStyle : CategoryIntentRouter.CategoryIntent.LIST;
+                        String requestedType = style == CategoryIntentRouter.CategoryIntent.INCOME_TYPES
+                                ? "INCOME" : style == CategoryIntentRouter.CategoryIntent.SPENDING_TYPES ? "EXPENSE" : "ALL";
+                        toolResult = listToolResultForType(tool, user, requestedType, toolResult);
                         toolResult = tagResult(toolResult, style);
                         finalText = style == CategoryIntentRouter.CategoryIntent.SPENDING_TYPES
                                 ? responseBuilder.buildSpendingTypesText(toolResult)
+                                : style == CategoryIntentRouter.CategoryIntent.INCOME_TYPES
+                                ? responseBuilder.buildIncomeTypesText(toolResult)
                                 : responseBuilder.buildListCategoriesText(toolResult);
                     } else if (isFinanceDataTool(tool.getName()) && toolResult.isSuccess()) {
                         FinanceIntent intent = resolveFinanceIntent(message, toolResult);
@@ -303,6 +438,12 @@ public class AiOrchestrator {
                 .message(toolResult.getMessage())
                 .data(data)
                 .build();
+    }
+
+    private ToolResultDto listToolResultForType(
+            AiTool tool, User user, String requestedType, ToolResultDto currentResult) {
+        if ("ALL".equals(requestedType)) return currentResult;
+        return tool.execute(user, Map.of("categoryType", requestedType));
     }
 
     private AiTool findTool(String name) {
